CloudKit - TeachKit: • TKTeacherController • TKClassController • Änderung am Model vorgenommen (betrifft nur TeachKit-Gruppe)

--- a/Projekt/Teachify/Teachify/Base.lproj/Main.storyboard
+++ b/Projekt/Teachify/Teachify/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -45,6 +44,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dfr-4z-OEL">
+                                <rect key="frame" x="85" y="455" width="205" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cloud Kit Test View Controller"/>
+                                <connections>
+                                    <segue destination="z5S-Ey-kkg" kind="show" id="uMV-cb-jwW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -62,13 +69,38 @@
             </objects>
             <point key="canvasLocation" x="353" y="833"/>
         </scene>
+        <!--Cloud Kit Test View Controller-->
+        <scene sceneID="DqY-GL-CI4">
+            <objects>
+                <viewController id="z5S-Ey-kkg" customClass="CloudKitTestViewController" customModule="Teachify" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Jfc-Ia-jMf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tlz-V4-IZn">
+                                <rect key="frame" x="22" y="157" width="96" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Do something"/>
+                                <connections>
+                                    <action selector="doSomethingAction:" destination="z5S-Ey-kkg" eventType="touchUpInside" id="TxA-Rk-9Ox"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="A7c-xo-NPe"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ng3-Bu-KuK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="353" y="1641"/>
+        </scene>
         <!--TeacherStoryboard-->
         <scene sceneID="CrI-eB-csM">
             <objects>
                 <viewControllerPlaceholder storyboardName="TeacherStoryboard" id="vUW-jR-P5B" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9fc-6H-EPa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1038" y="648"/>
+            <point key="canvasLocation" x="1034" y="649"/>
         </scene>
     </scenes>
 </document>
